--- a/project/project/project.vcxproj.filters
+++ b/project/project/project.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClInclude Include="Muscle.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="globals.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
