--- a/project/project/project.vcxproj
+++ b/project/project/project.vcxproj
@@ -143,7 +143,7 @@
   <ItemGroup>
     <ClInclude Include="Creature.h" />
     <ClInclude Include="Ground.h" />
-    <ClInclude Include="globals.h" />
+    <ClInclude Include="constants.h" />
     <ClInclude Include="Muscle.h" />
     <ClInclude Include="Node.h" />
     <ClInclude Include="project.h" />
@@ -165,7 +165,6 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
-    <ClCompile Include="Vec2.cpp" />
     <ClCompile Include="World.cpp" />
   </ItemGroup>
   <ItemGroup>
