--- a/project/project/project.vcxproj
+++ b/project/project/project.vcxproj
@@ -142,6 +142,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Creature.h" />
+    <ClInclude Include="LengthTimePair.h" />
     <ClInclude Include="Ground.h" />
     <ClInclude Include="constants.h" />
     <ClInclude Include="Muscle.h" />
