--- a/project/project/project.vcxproj.filters
+++ b/project/project/project.vcxproj.filters
@@ -54,6 +54,9 @@
     <ClInclude Include="LengthTimePair.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Generation.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -75,6 +78,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Muscle.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Generation.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
