--- a/project/project/project.vcxproj.filters
+++ b/project/project/project.vcxproj.filters
@@ -57,6 +57,9 @@
     <ClInclude Include="Generation.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Config.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
